--- a/views/product_view.hbs
+++ b/views/product_view.hbs
@@ -6,7 +6,7 @@
 </head>
 <body>
   <div class="container">
-    <h2>Product List {{ hostIp }}</h2>
+    <h2>Product List {{ hostIp }} Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo nostrum ipsam aut.</h2>
 		<button class="btn btn-success" data-toggle="modal" data-target="#myModalAdd">Add New</button>
     <table class="table table-striped" id="mytable">
       <thead>
